# ferrocat

./: .gitignore  .release-please-config.json  .release-please-manifest.json  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  package.json  pnpm-lock.yaml
.cargo/: config.toml
.githooks/: pre-commit  pre-push
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  docs-pages.yml  publish.yml  release-pr.yml
benchmark/: .gitignore  setup.sh
benchmark/node/: adapter.cjs  package-lock.json  package.json
benchmark/profiles/: gettext-compat-v1.json  gettext-official-quick-v1.json  gettext-official-v1.json  gettext-workflows-ecosystem-v1.json  gettext-workflows-v1.json  serious-v1.json  storage-formats-v1.json
benchmark/python/: adapter.py  setup.sh
benchmark/results/: README.md  gettext-official-v1-ed87944.json
conformance/: SOURCES.md  harness.rs  icu_harness.rs
conformance/fixtures/babel/: enclosed_locations.po  enclosed_locations_message.expected.toml  irregular_multiline.expected.toml  irregular_multiline.po  unknown_language.po  unknown_language_header.expected.toml
conformance/fixtures/icu/: apostrophe_escape.expected.toml  apostrophe_escape.txt  error_position.expected.toml  error_position.txt  invalid_offset.expected.toml  invalid_offset.txt  mismatched_tag.expected.toml  mismatched_tag.txt  missing_other.expected.toml  missing_other.txt  plural_and_selectordinal.expected.toml  plural_and_selectordinal.txt  simple_argument.expected.toml  tags_nested.expected.toml  tags_nested.txt
conformance/fixtures/pofile/: c_string_newlines.expected.toml  c_string_quote.expected.toml  c_string_tabs.expected.toml  c_strings.expected.toml  c_strings.po  c_strings_header.expected.toml  comment.po  comment_empty.expected.toml  comment_translator.expected.toml  commented.expected.toml  commented.po  commented_active.expected.toml  commented_obsolete_first.expected.toml  commented_obsolete_second.expected.toml  context_action.expected.toml  context_display.expected.toml  contexts.po  contexts_ambiguous.expected.toml  contexts_multiline.expected.toml  fuzzy.normalized.expected.po  fuzzy.po  fuzzy_parse.expected.toml  multiline.expected.toml  multiline.po  multiline_header.expected.toml  multiline_item.expected.toml  multiline_project_id.expected.toml  plural_header.expected.toml  plural_header.po  plural_header_item.expected.toml  plurals_messages.expected.toml  plurals_messages.po  plurals_messages_first.expected.toml  reference.expected.toml  (+6 more)
conformance/manifests/: icu-official.toml  po-babel.toml  po-pofile.toml  po-polib.toml
crates/ferrocat/: CHANGELOG.md  Cargo.toml  README.md
crates/ferrocat-bench/: CHANGELOG.md  Cargo.toml
crates/ferrocat-bench/fixtures/: stress.po
crates/ferrocat-bench/src/: compare.rs  fixtures.rs  main.rs
crates/ferrocat-conformance/: CHANGELOG.md  Cargo.toml
crates/ferrocat-conformance/src/: lib.rs
crates/ferrocat-conformance/src/cases/: icu_official.rs  po_babel.rs  po_pofile.rs  po_polib.rs
crates/ferrocat-icu/: CHANGELOG.md  Cargo.toml  README.md
crates/ferrocat-icu/src/: ast.rs  error.rs  lib.rs  parser.rs  utils.rs
crates/ferrocat-icu/tests/: conformance_icu.rs
crates/ferrocat-node/: Cargo.toml
crates/ferrocat-po/: CHANGELOG.md  Cargo.toml  README.md
crates/ferrocat-po/src/: api.rs  borrowed.rs  lib.rs  merge.rs  parse.rs  scan.rs  serialize.rs  text.rs  utf8.rs
crates/ferrocat-po/src/api/: catalog.rs  compile.rs  compile_types.rs  file_io.rs  helpers.rs  ndjson.rs  plural.rs  types.rs
crates/ferrocat-po/src/api/tests/: catalog.rs  compile.rs  mod.rs  plural.rs
crates/ferrocat-po/tests/: conformance_merge.rs  conformance_po.rs
crates/ferrocat/examples/: catalog_runtime.rs  po_roundtrip.rs
crates/ferrocat/src/: catalog.rs  compile.rs  headers.rs  lib.rs
crates/ferrocat/tests/: catalog.rs  po.rs  public_api.rs  references.rs  runtime_api.rs  smoke.rs
crates/ferrox-bench/: Cargo.toml
crates/ferrox-bench/fixtures/: realistic.po  tiny.po
crates/ferrox-bench/src/: fixtures.rs  main.rs
crates/ferrox-conformance/: Cargo.toml
crates/ferrox-icu/: Cargo.toml
crates/ferrox-po/: Cargo.toml
crates/ferrox-po/src/: api.rs  borrowed.rs  lib.rs  merge.rs  parse.rs  scan.rs  serialize.rs  text.rs
crates/ferrox-po/tests/: conformance_po.rs
crates/pofile/: CHANGELOG.md  Cargo.toml  README.md
docs/: .gitignore  api-overview.md  benchmark-fixtures.md  benchmarking.md  conformance.md  package.json  performance-history.md  pnpm-lock.yaml  react-router.config.ts  release-verification.md  test-coverage.md  vite.config.ts
docs-orig/: benchmarking.md  performance-history.md  release-verification.md
docs-orig/adr/: 0002-owned-and-borrowed-parse-apis.md  0005-icu-canonical-model-and-gettext-bridge.md  0008-normalize-headerless-po-output.md  0009-runtime-catalog-compiled-key-strategy.md  0010-compiled-catalog-artifact-api.md  0011-ndjson-catalog-storage-format.md
docs-orig/notes/: 2026-03-17-bundler-aware-message-sidecars.md
docs-orig/plans/: 2026-03-14-ferrocat-porting-plan.md
docs/adr/: 0001-rust-native-performance-first-core.md  0003-byte-oriented-scanning-and-structural-separation.md  0004-model-msgstr-by-semantics.md  0005-icu-canonical-model-and-gettext-bridge.md  0006-separate-po-core-from-high-level-catalog-api.md  0007-drop-previous-msgid-history.md  0008-normalize-headerless-po-output.md  0009-runtime-catalog-compiled-key-strategy.md  0011-ndjson-catalog-storage-format.md  0012-icu-native-core-and-gettext-compat-semantics.md  README.md
docs/app/: root.tsx
docs/notes/: 2026-03-14-scan-architecture.md  2026-03-17-bundler-aware-message-sidecars.md
docs/plans/: 2026-03-13-current-state.md  2026-03-13-ferrocat-todo.md  2026-03-13-native-placeholder-packages-design.md  2026-03-13-native-prebuild-packages-design.md  2026-03-13-release-please-design.md  2026-03-14-ferrox-porting-plan.md
scripts/: build-native-package.mjs  coverage-gate.mjs  smoke-native.mjs
(+78 files in other folders)
