[package]
name = "ferrocat-bench"
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish = false
repository.workspace = true
rust-version.workspace = true
description = "Workspace-only benchmark harness for ferrocat parser, serializer, and catalog workloads."

[[bin]]
name = "ferrocat-bench"
path = "src/main.rs"

[dependencies]
ferrocat-conformance = { path = "../ferrocat-conformance" }
ferrocat-icu = { path = "../ferrocat-icu" }
ferrocat-po = { path = "../ferrocat-po" }

[lints]
workspace = true
