[package]
name = "ferrocat-bench"
version = "0.6.0"
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish = false
repository.workspace = true
rust-version.workspace = true
description = "Workspace-only benchmark harness for ferrocat parser, serializer, and catalog workloads."

[[bin]]
name = "ferrocat-bench"
path = "src/main.rs"

[dependencies]
ferrocat-conformance = { path = "../ferrocat-conformance" }
ferrocat-icu = { path = "../ferrocat-icu" }
ferrocat-po = { path = "../ferrocat-po" }
libc = "0.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
tempfile = "3.23.0"
time = { version = "0.3.44", features = ["formatting"] }

[lints]
workspace = true
