[package]
name = "ferrocat"
version = "0.0.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Rust-first gettext and ICU toolkit for PO parsing, compilation, and runtime formatting."
homepage = "https://github.com/sebastian-software/ferrocat"
documentation = "https://docs.rs/ferrocat"
readme = "README.md"
keywords = ["ferrocat", "gettext", "po", "icu", "i18n"]
categories = ["internationalization", "localization", "parser-implementations"]

[package.metadata.docs.rs]
rustdoc-args = ["--generate-link-to-definition"]

[lib]
path = "src/lib.rs"
