[package]
name = "ferrox-po"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
ferrox-icu = { path = "../ferrox-icu" }
icu_locale = "2.1.1"
icu_plurals = { version = "2.1.1", features = ["compiled_data"] }
memchr = "2.7.6"

[dev-dependencies]
ferrox-conformance = { path = "../ferrox-conformance" }

[lints]
workspace = true
